--- a/.github/workflows/first_workflow.yml
+++ b/.github/workflows/first_workflow.yml
@@ -4,7 +4,7 @@ jobs:
   first-job:
     runs-on: ubuntu-latest
     steps:
-      -name: Print greeting
-       run: echo "Hello World!"
-      -name: Print goodbye
-       run: echo "Good bye!!"
+      - name: Print hello
+        run: echo "Hellow world!!"
+      - name: Print goodbye
+        run: echo "Good bye!!"  
