--- a/.github/workflows/first_workflow.yml
+++ b/.github/workflows/first_workflow.yml
@@ -4,5 +4,8 @@ jobs:
   first-job:
     runs-on: ubuntu-latest
     steps:
+      - name: Print hello
+        run: echo "Hello!" 
       - name: Print goodbye
-        run: echo "Good bye!!"  
+        run: echo "Good bye!!"    
+        
